# MathNotesCpp

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: CanvasWidget.cpp  CanvasWidget.h  GeminiClient.cpp  GeminiClient.h  MainWindow.cpp  MainWindow.h  main.cpp
